# cpp_starter

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  README.org  jamroot  vcpkg.json
app/: CMakeLists.txt  jamfile  main.cpp
args/: CMakeLists.txt  jamfile  main.cpp
lib/: CMakeLists.txt
lib/lib/: lib.cpp  lib.hpp  lib.test.cpp  main.test.cpp
libargs/: CMakeLists.txt  args.cpp  args.hpp  args.test.cpp  jamfile  main.test.cpp
template/: .clang-format  CMakeLists.txt
template/args/: main.cpp
template/lib/: lib.test.cpp
template/libargs/: CMakeLists.txt  args.hpp  main.test.cpp
template/libprj_name/: args.cpp  args.test.cpp  jamfile
template/prj_name/: CMakeLists.txt  jamfile
